[package]
name = "shorty"
version = "0.1.0"
authors = ["Matias Keveri <keveri@users.noreply.github.com>"]

[lib]
name = "shorty"
path = "src/shorty/lib.rs"

[[bin]]
name = "server"
test = false
doc  = false

[dependencies]
rocket = "0.3.*"
rocket_codegen = "0.3.*"
harsh = "0.1.4"
r2d2_redis = "0.7.0"
r2d2 = "0.8.2"
redis = "0.8.0"
